Ikinci dersin sonu + temel mobil gorunum

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 
   <header>
 
-    <img class="logo" src="images/WitFlix.png" alt="WitFlix" />
+    <div class="logo-wrapper">
+      <img class="logo" src="images/WitFlix.png" alt="WitFlix" />
+      <div class="account-info">
+        <i class="bi bi-bell-fill notifications"></i>
+        <img src="https://i.pravatar.cc/200" />
+      </div>
+    </div>
 
     <nav>
       <a href="#">Movies</a>
@@ -26,7 +32,7 @@
       <a href="#">Documentaries</a>
     </nav>
 
-    <div class="account-info">
+    <div class="account-info desktop">
       <i class="bi bi-bell-fill notifications"></i>
       <img src="https://i.pravatar.cc/200" />
     </div>
@@ -62,14 +68,139 @@
       <p>
         <strong>Tags: </strong> #Trilogy
       </p>
+      <button class="play-button">
+        <i class="bi bi-play-fill"></i>
+        <span>Play Now</span>
+      </button>
     </div>
   </main>
 
-  <section class="popular-movies"></section>
+  <section class="popular-movies">
+    <div class="section-header">
+      <h3>Popular Movies</h3>
+      <a href="#">View All</a>
+    </div>
+    <div class="movie-cards">
+      <div class="movie-card">
+        <div class="wrapper">
+          <h4>Inception</h4>
+          <div class="details">
+            <span class="age">16+</span>
+            <span class="duration">2h 58m</span>
+          </div>
+          <button class="play-button">
+            <i class="bi bi-play-fill"></i>
+            <span>Play Now</span>
+          </button>
+        </div>
+      </div>
+      <div class="movie-card">
+        <div class="wrapper">
+          <h4>Inception</h4>
+          <div class="details">
+            <span class="age">16+</span>
+            <span class="duration">2h 58m</span>
+          </div>
+          <button class="play-button">
+            <i class="bi bi-play-fill"></i>
+            <span>Play Now</span>
+          </button>
+        </div>
+      </div>
+      <div class="movie-card">
+        <div class="wrapper">
+          <h4>Inception</h4>
+          <div class="details">
+            <span class="age">16+</span>
+            <span class="duration">2h 58m</span>
+          </div>
+          <button class="play-button">
+            <i class="bi bi-play-fill"></i>
+            <span>Play Now</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <section class="recommended-movies"></section>
+  <section class="recommended-movies">
+    <div class="section-header">
+      <h3>Recommended Movies</h3>
+      <a href="#">View All</a>
+    </div>
+    <div class="movie-cards">
+      <div class="movie-card">
+        <div class="wrapper">
+          <h4>Inception</h4>
+          <div class="details">
+            <span class="age">16+</span>
+            <span class="duration">2h 58m</span>
+          </div>
+          <button class="play-button">
+            <i class="bi bi-play-fill"></i>
+            <span>Play Now</span>
+          </button>
+        </div>
+      </div>
+      <div class="movie-card">
+        <div class="wrapper">
+          <h4>Inception</h4>
+          <div class="details">
+            <span class="age">16+</span>
+            <span class="duration">2h 58m</span>
+          </div>
+          <button class="play-button">
+            <i class="bi bi-play-fill"></i>
+            <span>Play Now</span>
+          </button>
+        </div>
+      </div>
+      <div class="movie-card">
+        <div class="wrapper">
+          <h4>Inception</h4>
+          <div class="details">
+            <span class="age">16+</span>
+            <span class="duration">2h 58m</span>
+          </div>
+          <button class="play-button">
+            <i class="bi bi-play-fill"></i>
+            <span>Play Now</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <footer></footer>
+  <footer>
+    <div class="disclaimer">
+      <nav>
+        <a href="#">Terms of Use</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">FAQ</a>
+        <a href="#">Watch List</a>
+      </nav>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sodales mauris nulla, eu condimentum massa
+        suscipit et. Etiam tincidunt placerat consectetur. Praesent ex enim, ultricies vitae diam ac, iaculis maximus
+        lorem. Nulla facilisis malesuada fringilla.
+      </p>
+    </div>
+    <div class="social-media">
+      <span>Follow Us</span>
+      <div class="links">
+        <a href="#"><img src="images/facebook-icon.png" /></a>
+        <a href="#"><img src="images/youtube-icon.png" /></a>
+        <a href="#"><img src="images/twitter-icon.png" /></a>
+      </div>
+    </div>
+    <div class="apps">
+      <span>Follow Us</span>
+      <div class="links">
+        <a href="#"><img src="images/applestore.png" /></a>
+        <a href="#"><img src="images/googleplay.png" /></a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
